# marble-arm64-windows

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MarbleMacros.cmake  UPSTREAM.md  bump.ps1  setup-gpg.ps1
src/plugins/: CMakeLists.txt
src/plugins/declarative/: Bookmarks.cpp  CMakeLists.txt  Coordinate.cpp  Coordinate.h  DeclarativeDataPlugin.cpp  DeclarativeDataPlugin.h  DeclarativeDataPluginItem.cpp  DeclarativeDataPluginModel.cpp  DeclarativeMapThemeManager.cpp  MapThemeModel.cpp  MapThemeModel.h  MarbleDeclarativeObject.cpp  MarbleDeclarativePlugin.cpp  MarbleDeclarativePlugin.h  MarbleDeclarativeWidget.cpp  MarbleDeclarativeWidget.h  Navigation.cpp  OfflineDataModel.cpp  OfflineDataModel.h  Placemark.cpp  Placemark.h  PositionSource.cpp  RelatedActivities.cpp  RouteRequestModel.cpp  Routing.cpp  Search.cpp  Search.h  Settings.cpp  Tracking.cpp  ZoomButtonInterceptor.cpp
src/plugins/designer/latloneditwidget/: LatLonEditPlugin.cpp  LatLonEditPlugin.h
src/plugins/designer/marblewidget/: MarbleWidgetPlugin.cpp  MarbleWidgetPlugin.h
src/plugins/designer/navigator/: MarbleNavigatorPlugin.cpp  MarbleNavigatorPlugin.h
src/plugins/positionprovider/: CMakeLists.txt
src/plugins/positionprovider/flightgear/: FlightGearPositionProviderPlugin.cpp
src/plugins/positionprovider/geoclue/: GeoCluePositionProviderPlugin.cpp
src/plugins/qt-components/: CMakeLists.txt  QtComponentsPlugin.cpp  QtComponentsPlugin.h
src/plugins/render/: CMakeLists.txt
src/plugins/render/aprs/: AprsGatherer.cpp  (+3 more)
src/qt-components/marble-touch/: CMakeLists.txt  CloudSyncPage.qml  main.cpp
(+446 files in other folders)
